[fix] dropdown-menu z-index

--- a/app/assets/stylesheets/gws/schedule/_gws.scss
+++ b/app/assets/stylesheets/gws/schedule/_gws.scss
@@ -183,7 +183,7 @@
   }
 }
 .fc-view {
-  z-index: 100;
+  //z-index: 100;
 }
 .fc-view table {
   box-sizing: border-box;
